--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -58,5 +58,6 @@
   "mn16:24.1": "Non conduce la vita spirituale sperando di rinascere in una delle classi delle divinità, pensando: ‘Che attraverso questo precetto o osservanza o mortificazione o vita spirituale diventi una delle divinità!’",
   "mn16:24.2": "Essendo così, la sua mente è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
   "mn16:24.3": "Questa è la quinta tenaglia emotiva che ha tagliato.",
-  "mn16:24.4": "Queste sono le cinque tenaglie emotive che ha tagliato."
+  "mn16:24.4": "Queste sono le cinque tenaglie emotive che ha tagliato.",
+  "mn16:25.1": "Una volta che un mendicante ha abbandonato questi cinque tipi di aridità emotiva e tagliato queste cinque tenaglie emotive, è possibile che raggiunga crescita, miglioramento, e maturità in questo insegnamento ed addestramento."
 }
