--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -63,5 +63,5 @@
   "mn16:26.1": "Sviluppa la base dei poteri psichici che ha il raccoglimento mentale causato dall'entusiasmo, e sforzo attivo …",
   "mn16:26.2": "la base dei poteri psichici che ha il raccoglimento mentale causato dall'energia, e sforzo attivo …",
   "mn16:26.3": "la base dei poteri psichici che ha il raccoglimento mentale causato dallo sviluppo, e sforzo attivo …",
-  "mn16:26.4": "la base dei poteri psichici che ha il raccoglimento mentale causato dall'indagine, e sforzo attivo. Ed il quinto è il vigore assoluto."
+  "mn16:26.4": "la base dei poteri psichici che ha il raccoglimento mentale causato dall'indagine, e sforzo attivo. Ed il quinto è il vigore puro."
 }
