--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -64,5 +64,6 @@
   "mn16:26.2": "la base dei poteri psichici che ha il raccoglimento mentale causato dall'energia, e sforzo attivo …",
   "mn16:26.3": "la base dei poteri psichici che ha il raccoglimento mentale causato dallo sviluppo, e sforzo attivo …",
   "mn16:26.4": "la base dei poteri psichici che ha il raccoglimento mentale causato dall'indagine, e sforzo attivo. Ed il quinto è il vigore puro.",
-  "mn16:27.1": "Un mendicante che possiede questi quindici fattori, includendo il vigore, è in grado di rompere il guscio, diventare risvegliato, e raggiungere il santuario supremo."
+  "mn16:27.1": "Un mendicante che possiede questi quindici fattori, includendo il vigore, è in grado di rompere il guscio, diventare risvegliato, e raggiungere il santuario supremo.",
+  "mn16:27.2": "Immaginate una chioccia con otto o dieci o dodici uova."
 }
