--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -70,5 +70,6 @@
   "mn16:27.4": "Anche se la chioccia non esprime il desiderio:",
   "mn16:27.5": "‘Se solo i miei pulcini potessero rompere il guscio con gli artigli ed il becco e si schiudessero in sicurezza!’",
   "mn16:27.6": "Rompono il guscio e si schiudono in sicurezza comunque.",
-  "mn16:27.7": "Allo stesso modo, un mendicante che possiede questi quindici fattori, includendo il vigore, è in grado di rompere il guscio, diventare risvegliato, e raggiungere il santuario supremo.”"
+  "mn16:27.7": "Allo stesso modo, un mendicante che possiede questi quindici fattori, includendo il vigore, è in grado di rompere il guscio, diventare risvegliato, e raggiungere il santuario supremo.”",
+  "mn16:27.8": "Questo è ciò che il Buddha disse."
 }
