--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -55,6 +55,7 @@
   "mn16:20.4": "Questa è la prima tenaglia emotiva che ha tagliato.",
   "mn16:21.1": "Inoltre, un mendicante è libero da avidità per il corpo …",
   "mn16:22.1": "È libero da avidità per la forma …",
+  "mn16:23.1": "Non mangia quanto vuole finché ha la pancia piena, e poi indulge nei piaceri del dormire, sdraiarsi, e sonnecchiare …",
   "mn16:24.1": "Non conduce la vita spirituale sperando di rinascere in una delle classi delle divinità, pensando: ‘Che attraverso questo precetto o osservanza o mortificazione o vita spirituale diventi una delle divinità!’",
   "mn16:24.2": "Essendo così, la sua mente è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
   "mn16:24.3": "Questa è la quinta tenaglia emotiva che ha tagliato.",
