--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -2,7 +2,7 @@
   "sn-blurbs:sn1": "Os “Discursos Conectados com Divindades” contêm 81 discursos, cada um retratando o Buda em conversas com uma divindade. Tipicamente, uma divindade se aproxima do Buda no mosteiro de Sāvatthī, iluminando a noite com sua glória. A divindade se dirige ao Buda com uma questão ou um versículo, que pode ser um elogio, um desafio, uma charada, ou somente uma reflexão. O Buda responde, normalmente elevando o discurso para uma esfera superior. Como sempre acontece nos textos budistas, uma divindade não é adorada, mas tida como um ser que renasceu temporariamente em um plano mais elevado; as divindades aprendem com o Buda e não o inverso. Na maioria dos casos, o arcabouço da narrativa é pequeno e, posteriormente, é abandonado, mantendo-se apenas os versos. Os discursos não têm um tema específico, podendo variar do simples ao profundo.",
   "sn-blurbs:sn1.1": "O Buda atravessou a enchente do sofrimento sem ficar de pé ou nadar.",
   "sn-blurbs:sn1.2": "A liberdade vem quando damos fim ao apego pelo renascimento.",
-  "sn-blurbs:sn1.3": "A vida é curta, por isso devemos abandonar os engodos do mundo.",
+  "sn-blurbs:sn1.3": "A vida é curta, por isso devemos abandonar o engodo do mundo.",
   "sn-blurbs:sn1.4": "O tempo voa, por isso devemos abandonar o engodo do mundo.",
   "sn-blurbs:sn1.5": "Um conjunto de perguntas enigmáticas respondidas de modo igualmente enigmático pelo Buda.",
   "sn-blurbs:sn1.6": "Quantos são os despertos enquanto os outros dormem?",
