--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -29,5 +29,6 @@
   "sn-blurbs:sn1.27": "O fluxo do renascimento é interrompido quando cessa o nome e forma.",
   "sn-blurbs:sn1.28": "Até os ricos são sedentos por mais—há alguém livre da ganância?",
   "sn-blurbs:sn1.29": "Uma charada sobre a fuga.",
-  "sn-blurbs:sn1.30": "É perguntado ao Buda como se libertar do sofrimento."
+  "sn-blurbs:sn1.30": "É perguntado ao Buda como se libertar do sofrimento.",
+  "sn-blurbs:sn1.31": "Várias divindades pronunciam versos louvando a associação com os bons e o Buda lhes dá sua resposta."
 }
