--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -31,5 +31,6 @@
   "sn-blurbs:sn1.29": "Uma charada sobre a fuga.",
   "sn-blurbs:sn1.30": "É perguntado ao Buda como se libertar do sofrimento.",
   "sn-blurbs:sn1.31": "Várias divindades pronunciam versos louvando a associação com os bons e o Buda lhes dá sua resposta.",
-  "sn-blurbs:sn1.32": "Várias divindades pronunciam versos louvando a generosidade e o Buda lhes dá sua resposta."
+  "sn-blurbs:sn1.32": "Várias divindades pronunciam versos louvando a generosidade e o Buda lhes dá sua resposta.",
+  "sn-blurbs:sn1.33": "Várias divindades pronunciam versos louvando a generosidade e o Buda lhes dá a sua resposta dizendo que praticar o Dhamma vai mais além."
 }
