--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -34,5 +34,6 @@
   "sn-blurbs:sn1.32": "Várias divindades pronunciam versos louvando a generosidade e o Buda lhes dá sua resposta.",
   "sn-blurbs:sn1.33": "Várias divindades pronunciam versos louvando a generosidade e o Buda lhes dá a sua resposta dizendo que praticar o Dhamma vai mais além.",
   "sn-blurbs:sn1.34": "Duas divindades trocam versos com o Buda sobre como os prazeres sensuais dão origem ao sofrimento.",
-  "sn-blurbs:sn1.35": "Algumas divindades buscam encontrar faltas no Buda. Ele responde às suas críticas, o que estimula uma discussão sobre faltas e o perdão."
+  "sn-blurbs:sn1.35": "Algumas divindades buscam encontrar faltas no Buda. Ele responde às suas críticas, o que estimula uma discussão sobre faltas e o perdão.",
+  "sn-blurbs:sn1.36": "Vários deuses Satullapa se dirigem ao Buda com versos sobre vários temas. A identificação desses versos não é clara e a comparação com seus paralelos em chinês indicam que a versão em páli sofreu perdas textuais."
 }
