--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -37,5 +37,6 @@
   "sn-blurbs:sn1.35": "Algumas divindades buscam encontrar faltas no Buda. Ele responde às suas críticas, o que estimula uma discussão sobre faltas e o perdão.",
   "sn-blurbs:sn1.36": "Vários deuses Satullapa se dirigem ao Buda com versos sobre vários temas. A identificação desses versos não é clara e a comparação com seus paralelos em chinês indicam que a versão em páli sofreu perdas textuais.",
   "sn-blurbs:sn1.37": "Uma grande congregação de divindades se reúne para visitar o Buda e a Saṅgha em Kapilavatthu.",
-  "sn-blurbs:sn1.38": "Várias divindades louvam a resiliência e a compostura do Buda quando uma pedra lhe fere o pé."
+  "sn-blurbs:sn1.38": "Várias divindades louvam a resiliência e a compostura do Buda quando uma pedra lhe fere o pé.",
+  "sn-blurbs:sn1.39": "Uma deusa, que se identifica pelo nome de Kokanadā, atesta com sua experiência os ensinamentos do Buda sobre o kamma."
 }
