--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -51,5 +51,6 @@
   "sn-blurbs:sn1.49": "O Buda é perguntado sobre o futuro dos avarentos e dos generosos.",
   "sn-blurbs:sn1.50": "Ghaṭīkāra, um discípulo do Buda Kassapa, visita o Buda, conta de sua vida passada e das conquistas de seus seis amigos.",
   "sn-blurbs:sn1.51": "A moralidade é boa até mesmo na velhice.",
-  "sn-blurbs:sn1.52": "A moralidade é boa quando não envelhece."
+  "sn-blurbs:sn1.52": "A moralidade é boa quando não envelhece.",
+  "sn-blurbs:sn1.53": "Coisas que são amigas nesta e na próxima vida."
 }
