--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -55,5 +55,6 @@
   "sn-blurbs:sn1.53": "Coisas que são amigas nesta e na próxima vida.",
   "sn-blurbs:sn1.54": "O que sustenta vários seres? Estranhamente, este verso não tem uma “contraparte” no Dhamma.",
   "sn-blurbs:sn1.55": "Uma pessoa é criada por meio do apego e teme o sofrimento.",
-  "sn-blurbs:sn1.56": "Uma pessoa é criada pelo apego e não se liberta do sofrimento."
+  "sn-blurbs:sn1.56": "Uma pessoa é criada pelo apego e não se liberta do sofrimento.",
+  "sn-blurbs:sn1.57": "Uma pessoa é criada pelo apego e seu destino é traçado por seus atos."
 }
