--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -58,5 +58,6 @@
   "sn-blurbs:sn1.56": "Uma pessoa é criada pelo apego e não se liberta do sofrimento.",
   "sn-blurbs:sn1.57": "Uma pessoa é criada pelo apego e seu destino é traçado por seus atos.",
   "sn-blurbs:sn1.58": "Qual é o caminho errado?",
-  "sn-blurbs:sn1.59": "A verdadeira companhia de uma pessoa é sua fé."
+  "sn-blurbs:sn1.59": "A verdadeira companhia de uma pessoa é sua fé.",
+  "sn-blurbs:sn1.60": "Um par de versos sobre a natureza da poesia sem uma “contraparte” no Dhamma."
 }
