--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -66,5 +66,6 @@
   "sn-blurbs:sn1.64": "O mundo é limitado pelo apego.",
   "sn-blurbs:sn1.65": "O mundo está aprisionado pelo apego.",
   "sn-blurbs:sn1.66": "A morte e a velhice afligem o mundo, que arde no desejo.",
-  "sn-blurbs:sn1.67": "O mundo está preso ao apego e tem seus alicerces no sofrimento."
+  "sn-blurbs:sn1.67": "O mundo está preso ao apego e tem seus alicerces no sofrimento.",
+  "sn-blurbs:sn1.68": "Uma charada do Dhamma cuja resposta é, misteriosamente, “seis.”"
 }
