--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -70,5 +70,6 @@
   "sn-blurbs:sn1.68": "O mundo está confinado pela morte.",
   "sn-blurbs:sn1.69": "O mundo está preso ao desejo.",
   "sn-blurbs:sn1.70": "Uma charada do Dhamma cuja resposta é, misteriosamente, “seis.”",
-  "sn-blurbs:sn1.71": "Assassinar a raiva é o único assassinato louvado pelos nobres."
+  "sn-blurbs:sn1.71": "Assassinar a raiva é o único assassinato louvado pelos nobres.",
+  "sn-blurbs:sn1.72": "Qual o sinal de uma carruagem, um incêndio, uma nação e uma mulher?"
 }
