--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -71,5 +71,6 @@
   "sn-blurbs:sn1.69": "O mundo está preso ao desejo.",
   "sn-blurbs:sn1.70": "Uma charada do Dhamma cuja resposta é, misteriosamente, “seis.”",
   "sn-blurbs:sn1.71": "Assassinar a raiva é o único assassinato louvado pelos nobres.",
-  "sn-blurbs:sn1.72": "Qual o sinal de uma carruagem, um incêndio, uma nação e uma mulher?"
+  "sn-blurbs:sn1.72": "Qual o sinal de uma carruagem, um incêndio, uma nação e uma mulher?",
+  "sn-blurbs:sn1.73": "Várias questões sobre o que é melhor."
 }
