--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -76,5 +76,6 @@
   "sn-blurbs:sn1.74": "Uma divindade faz várias perguntas, que são respondidas por outra e recebem respostas melhores do Buda.",
   "sn-blurbs:sn1.75": "Por que as pessoas ainda temem, se o caminho já foi ensinado?",
   "sn-blurbs:sn1.76": "Várias questões sobre o caminho.",
-  "sn-blurbs:sn1.77": "Várias questões sobre assuntos diversos."
+  "sn-blurbs:sn1.77": "Várias questões sobre assuntos diversos.",
+  "sn-blurbs:sn1.78": "O que não deve ser doado?"
 }
