--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -78,5 +78,6 @@
   "sn-blurbs:sn1.76": "Várias questões sobre o caminho.",
   "sn-blurbs:sn1.77": "Várias questões sobre assuntos diversos.",
   "sn-blurbs:sn1.78": "O que não deve ser doado?",
-  "sn-blurbs:sn1.79": "Várias questões sobre assuntos diversos."
+  "sn-blurbs:sn1.79": "Várias questões sobre assuntos diversos.",
+  "sn-blurbs:sn1.80": "Várias questões sobre assuntos diversos."
 }
