--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -30,7 +30,7 @@
   "sn-blurbs:sn1.28": "Até os ricos são sedentos por mais—há alguém livre da ganância?",
   "sn-blurbs:sn1.29": "Uma charada sobre a fuga.",
   "sn-blurbs:sn1.30": "É perguntado ao Buda como se libertar do sofrimento.",
-  "sn-blurbs:sn1.31": "Várias divindades pronunciam versos louvando a associação com os bons e o Buda lhes dá sua resposta.",
+  "sn-blurbs:sn1.31": "Várias deidades pronunciam versos louvando a associação com os bons e o Buda lhes dá sua resposta.",
   "sn-blurbs:sn1.32": "Várias divindades pronunciam versos louvando a generosidade e o Buda lhes dá sua resposta.",
   "sn-blurbs:sn1.33": "Várias divindades pronunciam versos louvando a generosidade e o Buda lhes dá a sua resposta dizendo que praticar o Dhamma vai mais além.",
   "sn-blurbs:sn1.34": "Duas divindades trocam versos com o Buda sobre como os prazeres sensuais dão origem ao sofrimento.",
