--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -47,7 +47,7 @@
   "sn-blurbs:sn1.45": "Um verso em louvor ao Buda.",
   "sn-blurbs:sn1.46": "Para escapar da floresta da ilusão, é preciso o veículo do Dhamma.",
   "sn-blurbs:sn1.47": "O mérito dos que fazem doações a um mosteiro sempre cresce.",
-  "sn-blurbs:sn1.48": "Versos louvando o mosteiro de Jetavana, o Dhamma, e o venerável Sāriputta, aparentemente pronunciados por uma divindade para Anāthapiṇḍika.",
+  "sn-blurbs:sn1.48": "Versos louvando o mosteiro de Jetavana, o Dhamma, e o venerável Sāriputta, aparentemente pronunciados por uma deidade para Anāthapiṇḍika.",
   "sn-blurbs:sn1.49": "O Buda é perguntado sobre o futuro dos avarentos e dos generosos.",
   "sn-blurbs:sn1.50": "Ghaṭīkāra, um discípulo do Buda Kassapa, visita o Buda, conta de sua vida passada e das conquistas de seus seis amigos.",
   "sn-blurbs:sn1.51": "A moralidade é boa até mesmo na velhice.",
