--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -84,5 +84,6 @@
   "sn-blurbs:sn2": "Os “Discursos Conectados com Deuses” contêm 30 discursos, cada um retratando o Buda em conversa com um deus. Neles, o termo _devaputta_ é utilizado, ao invés de _devatā_, do _saṁyutta_ anterior. A diferença é meramente terminológica, sem alterações do sentido. O estilo destes discursos é semelhante ao dos “Discursos Conectados com Deidades,” embora haja maior ênfase no tema da renúncia. Vários destes discursos são recitados em terras Theravāda atualmente. Os versos Tāyana sobre a prática diligente no SN 2.8 são frequentemente recitados pelos monges e os discursos sobre o Sol e a Lua (SN 2.9 e SN 2.10) são cantos de proteção populares, encontrados também em tibetano.",
   "sn-blurbs:sn2.1": "Uma deidade chamada Kassapa visita o Buda e fala do treinamento de um discípulo mendicante na reclusão e sobre a fala correta.",
   "sn-blurbs:sn2.2": "A deidade Kassapa fala de como um discípulo mendicante deve ser um praticante da meditação, pacífico e livre.",
-  "sn-blurbs:sn2.3": "O deus Māgha pergunta ao Buda sobre o que se deve abandonar para dormir bem e de consciência limpa."
+  "sn-blurbs:sn2.3": "O deus Māgha pergunta ao Buda sobre o que se deve abandonar para dormir bem e de consciência limpa.",
+  "sn-blurbs:sn2.4": "A deidade Māgadha pergunta ao Buda quantas são as fontes de luz existentes no mundo. O Buda fala de cinco luzes, sendo ele a melhor."
 }
