--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -87,5 +87,6 @@
   "sn-blurbs:sn2.3": "O deus Māgha pergunta ao Buda sobre o que se deve abandonar para dormir bem e de consciência limpa.",
   "sn-blurbs:sn2.4": "A deidade Māgadha pergunta ao Buda quantas são as fontes de luz existentes no mundo. O Buda fala de cinco luzes, sendo ele a melhor.",
   "sn-blurbs:sn2.5": "O deus Dāmali sugere que um verdadeiro brâmane deve lutar para abandonar o desejo. O Buda discorda, dizendo que um verdadeiro santo já havia concluído o seu trabalho.",
-  "sn-blurbs:sn2.6": "A deidade Kāmada se dirige ao Buda com várias declarações enigmáticas lamentando a dificuldade da prática espiritual. O Buda concorda, mas aponta que os verdadeiros praticantes a fazem, mesmo que seja difícil."
+  "sn-blurbs:sn2.6": "A deidade Kāmada se dirige ao Buda com várias declarações enigmáticas lamentando a dificuldade da prática espiritual. O Buda concorda, mas aponta que os verdadeiros praticantes a fazem, mesmo que seja difícil.",
+  "sn-blurbs:sn2.7": "Pañcālacaṇḍa elogia o Buda por encontrar a abertura em meio ao confinamento do mundo. O Buda, porém, afirma que qualquer um com atenção plena e tranquilidade pode encontrar esta saída."
 }
