--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -12,5 +12,6 @@
   "mn17:2.3": "“Si, Signore,” risposero i mendicanti.",
   "mn17:2.4": "Il Buddha disse:",
   "mn17:3.1": "“Mendicanti, prendete un mendicante che vive vicino ad una giungla.",
-  "mn17:3.2": "Mentre è lì, la sua presenza mentale non viene stabilita, la sua mente non si raccoglie, i suoi contaminanti non vengono eliminati, e non arriva al santuario supremo."
+  "mn17:3.2": "Mentre è lì, la sua presenza mentale non viene stabilita, la sua mente non si raccoglie, i suoi contaminanti non vengono eliminati, e non arriva al santuario supremo.",
+  "mn17:3.3": "E le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono difficili da trovare."
 }
