--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -15,5 +15,6 @@
   "mn17:3.2": "Vivendo lì, la sua presenza mentale non viene stabilita, la sua mente non si raccoglie, i suoi contaminanti non vengono eliminati, e non arriva al santuario supremo.",
   "mn17:3.3": "E le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono difficili da trovare.",
   "mn17:3.4": "Quel mendicante deve riflettere:",
-  "mn17:3.5": "Vivendo vicino a questa giungla, la mia presenza mentale non viene stabilita, la mia mente non si raccoglie, i miei contaminanti non vengono eliminati, e non arrivo al santuario supremo."
+  "mn17:3.5": "Vivendo vicino a questa giungla, la mia presenza mentale non viene stabilita, la mia mente non si raccoglie, i miei contaminanti non vengono eliminati, e non arrivo al santuario supremo.",
+  "mn17:3.6": "E le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono difficili da trovare.’"
 }
