--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -19,5 +19,6 @@
   "mn17:3.6": "E le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono difficili da trovare.’",
   "mn17:3.7": "Quel mendicante deve lasciare quella giungle proprio a quell'ora della notte o del giorno; non deve stare lì.",
   "mn17:4.1": "Prendete un altro mendicante che vive vicino ad una giungla.",
-  "mn17:4.2": "La sua presenza mentale non viene stabilita …"
+  "mn17:4.2": "La sua presenza mentale non viene stabilita …",
+  "mn17:4.3": "Ma le necessità della vita sono facili da trovare."
 }
