--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -21,5 +21,6 @@
   "mn17:4.1": "Prendete un altro mendicante che vive vicino ad una giungla.",
   "mn17:4.2": "La sua presenza mentale non viene stabilita …",
   "mn17:4.3": "Ma le necessità della vita sono facili da trovare.",
-  "mn17:4.4": "Quel mendicante deve riflettere:"
+  "mn17:4.4": "Quel mendicante deve riflettere:",
+  "mn17:4.5": "Vivendo vicino a questa giungla, la mia presenza mentale non viene stabilita …"
 }
